# virtual-flex

./: .gitattributes  .gitignore  DESIGN.md  README.md  config.example.toml  conftest.py  pyproject.toml
.github/workflows/: release.yml
deploy/: build-deb.sh  build-zip.sh  install-pi.sh  install.sh
deploy/pkg/: config.toml  rigctld.env  virtual-flex-rigctld.service  virtual-flex.1  virtual-flex.service
tests/: test_cli.py  test_config.py  test_discovery.py  test_hamlib.py  test_k4.py  test_mdns.py  test_protocol.py  test_ptt.py  test_server.py  test_setup.py  test_state.py  test_supervisor.py  test_update.py  test_vita49.py
virtualflex/: __init__.py  __main__.py  config.py  discovery.py  k4.py  mdns.py  protocol.py  ptt.py  server.py  setup.py  state.py  supervisor.py  update.py  vita49.py
virtualflex/rigsource/: __init__.py  base.py  hamlib.py  sim.py
