[project]
name = "virtual-flex"
version = "0.1.3"
description = "A virtual FlexRadio: lets a hamlib-controlled rig drive the 4O3A PGXL/TGXL/AGXL stack as if it were a FLEX-6000/8000."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "AB0R" }]
dependencies = []  # stdlib only — asyncio + tomllib. Keeps it trivial to run in a container or on a Pi.

[project.scripts]
virtual-flex = "virtualflex.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["virtualflex"]
