[project]
name = "virtual-flex"
version = "0.3.3"
description = "A virtual FlexRadio: lets an Elecraft K4/K4D drive the 4O3A PGXL/TGXL/AGXL stack over the LAN as if it were a FLEX-8600."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "AB0R" }]
dependencies = []  # stdlib only — asyncio + tomllib. Keeps it trivial to run in a container or on a Pi.

[project.scripts]
virtual-flex = "virtualflex.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["virtualflex"]
